# bally

./: CMakeLists.txt  README.md
src/: constants.hpp  light.cpp  light.hpp  main.cpp  scene.cpp  scene.hpp  utils.cpp  utils.hpp
src/object/: mesh.cpp  mesh.hpp  object.hpp  plane.cpp  plane.hpp  polygon.cpp  polygon.hpp  sphere.cpp  sphere.hpp
src/texture/: eyes.h  eyes2.h  othereyes.h  texture.cpp  texture.hpp
src/type/: axis.hpp  color.cpp  color.hpp  intersection.cpp  intersection.hpp  material.cpp  material.hpp  ray.cpp  ray.hpp  vector.cpp  vector.hpp
